# carbon-mcp

./: .gitignore  README.md  high_energy_compute.py  pyproject.toml  requirements.txt
analyzer/: base.py  python_analyzer.py
cli/: main.py
core/: engine.py
estimators/: carbon.py  energy.py
rules/: api_calls.py  loops.py
server/: api.py  mcp_server.py  schemas.py
tests/: test_analyzer.py
