[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-mcp"
version = "0.1.0"
description = "MCP-style server that analyzes code and estimates its carbon impact"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "mcp>=1.2.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
carbon = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "analyzer*", "estimators*", "rules*", "cli*", "core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
